# SUPA-J

./: .gitignore  .gitmodules  Makefile  README.md  config.jnaerator  pom.xml
swig/: CMakeLists.txt  DDAClient--1.i  DDAPass.i  Makefile  Makefile-back  SUPA-1.i  SUPA.i  build.sh  genswig.py  result.txt
swig/include/DDA/: DDAClient.i  DDAPass.i  DDAStat.i  DDAVFSolver.i
swig/include/MemoryModel/: PointerAnalysis.i
swig/include/Util/: BasicTypes.i  PTAStat.i  SVFModule.i  SVFUtil.i
swig/jni/: SUPA_wrap.cpp
swig/src/org/supa/bindings/: AliasSetType.java  BVDataPTAImpl.java  BasicBlockVector.java  CallEdgeMap.java  CallSiteSet.java  ConstSVFGEdgeSet.java  DDAClient.java  DDAPass.java  DDAStat.java  DPItemToCPtSetMap.java  DPMToCVarMap.java  DPMToDPMMap.java  DPTItemSet.java  EdgeVector.java  FunDeclToDefMapTy.java  FunDefToDeclsMapTy.java  FunctionSet.java  FunctionSetType.java  FunptrDDAClient.java  GlobalDefToRepMapTy.java  GlobalSetType.java  InstructionVector.java  LLVMModuleSet.java  NUMStatMap.java  NodeDeque.java  NodeList.java  NodePair.java  NodeSet.java  NodeVector.java  PTAStat.java  PointerAnalysis.java  PtrCPtsMap.java  PtrToBVPtsMap.java  SUPA.java  SUPAConstants.java  SUPAJNI.java  SVFModule.java  SWIGTYPE_p_CHGraph.java  SWIGTYPE_p_CPtSet.java  SWIGTYPE_p_CVar.java  (+66 more)
